# WorkMemory-v2

./: PRD.md  index.html  package-lock.json  package.json
.trae/specs/build-workmemory-app/: checklist.md  spec.md  tasks.md
src/: App.tsx  index.css  main.tsx  mascot.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  mascot.json
src-tauri/src/: ai.rs  capture.rs  clipboard.rs  commands.rs  db.rs  episode.rs  insights.rs  ipc.rs  lib.rs  logging.rs  main.rs  mascot.rs  ocr.rs  privacy.rs  report.rs  search.rs  settings.rs  wiki.rs
src/components/layout/: CommandPalette.module.css  CommandPalette.tsx  MainLayout.module.css  MainLayout.tsx  Sidebar.module.css  Sidebar.tsx  index.ts
src/components/ui/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  Dialog.module.css  Dialog.tsx  Dropdown.module.css  Dropdown.tsx  EmptyState.module.css  EmptyState.tsx  Input.module.css  Input.tsx  Skeleton.module.css  Skeleton.tsx  Switch.module.css  Switch.tsx  Tabs.module.css  Tabs.tsx  Toast.module.css  Toast.tsx  Tooltip.module.css  Tooltip.tsx  index.ts
src/lib/: events.ts  ipc.ts  utils.ts
src/lib/__tests__/: utils.test.ts
src/mascot/: Mascot.module.css  Mascot.tsx  main.tsx  mascot.css
src/pages/: Calendar.module.css  Calendar.tsx  Graph.module.css  Graph.tsx  Insights.module.css  Insights.tsx  Reports.module.css  Reports.tsx  Search.module.css  Search.tsx  Settings.module.css  Settings.tsx  Today.module.css  Today.tsx  Wiki.module.css  Wiki.tsx  index.ts
src/store/: useEpisodeStore.ts  useMascotStore.ts  useSettingsStore.ts  useUIStore.ts
src/styles/: global.css  theme.ts
src/types/: index.ts
